--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,19 @@
 Package: dfmirroR
-Title: What the Package Does (One Line, Title Case)
+Title: Simulate a data frame that mirrors your actual data and produce shareable simulation code
 Version: 0.0.0.9000
 Authors@R: 
-    person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+    person("Jacob", "Patterson-Stein", email = "jacobpstein@gmail.com",
+  role = c("aut", "cre"))
+Maintainer: Jacob Patterson-Stein <jacobpstein@gmail.com>
+Description: This package allows users to input a data frame, simulate some number of observations based on specified columns of that data frame, and then outputs a string that contains the code to re-create the simulation. The goal is to both provide workable test data sets and provide users with the information they need to set up reproducable examples on websites such as Stackoverflow.com or with team members.
+License: MIT + file LICENSE
 Encoding: UTF-8
+Depends: R (>= 2.10)
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Imports: 
+    fitdistrplus, 
+    MASS
