--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,5 +15,6 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Imports: 
-    fitdistrplus, 
-    MASS
+    fitdistrplus,
+    MASS,
+    stats
