--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,13 +5,7 @@ Authors@R:
     person("Jacob", "Patterson-Stein", email = "jacobpstein@gmail.com",
   role = c("aut", "cre"))
 Maintainer: Jacob Patterson-Stein <jacobpstein@gmail.com>
-Description: This package allows users to input a data frame, simulate some number 
-of observations based on specified columns of that data frame, and then outputs 
-a string that contains the code to re-create the simulation. The goal is to both 
-provide workable test data sets and provide users with the information they need to 
-set up reproducable examples on websites such as Stackoverflow.com or with team members.
-This package was created out of a need to share examples in cases where data are private and 
-where a full dataframe is not needed for testing or coordinating.
+Description: This package allows users to input a data frame, simulate some number of observations based on specified columns of that data frame, and then outputs a string that contains the code to re-create the simulation. The goal is to both provide workable test data sets and provide users with the information they need to set up reproducable examples on websites such as Stackoverflow.com or with team members. This package was created out of a need to share examples in cases where data are private and where a full dataframe is not needed for testing or coordinating.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Depends: R (>= 2.10)
