--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: dfmirroR
-Title: Simulate a data frame that mirrors your actual data and produce shareable simulation code
+Title: Simulate a Data Frame Mirroring an Input and Produce Shareable Simulation Code
 Version: 0.0.0.9000
 Authors@R: 
     person("Jacob", "Patterson-Stein", email = "jacobpstein@gmail.com",
