--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,5 @@ Config/testthat/edition: 3
 Imports: 
     fitdistrplus,
     stats
+URL: https://github.com/jacobpstein/dfmirroR
+BugReports: https://github.com/jacobpstein/dfmirroR/issues
