--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,4 +6,5 @@ importFrom(e1071,skewness)
 importFrom(fitdistrplus,fitdist)
 importFrom(stats,rgamma)
 importFrom(stats,rnorm)
+importFrom(stats,sd)
 importFrom(stats,shapiro.test)
